# maru-deep-pro-search

./: .agent-context-credits.md  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENT_COMPATIBILITY.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IMPROVEMENT_PLAN.md  Makefile  README.en.md  README.ko.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  kilo.jsonc  opencode.json  pyproject.toml
.claude/: settings.json
.claude/commands/: research.md  verify.md
.claude/skills/fetch-page/: SKILL.md
.codebase-memory/: artifact.json  graph.db.zst
.codeium/: config.json
.codex/: config.toml
.cursor/: mcp.json  settings.json
.cursor/commands/: research.json  verify.json
.cursor/rules/: maru-research-protocol.md  parallel-search.md
.gemini/antigravity/: mcp_config.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  maru-research.yml  pages.yml  publish.yml  test.yml  validate.yml
.hermes/: config.yaml
.hermes/hooks/maru-research-gate/: HOOK.yaml  handler.py
.hermes/plugins/maru-research-gate/: __init__.py  plugin.yaml
.hermes/skills/: research-first.md  web-search.md
.kilo/rules/: deep-research.md
.kimi/: config.toml
.playwright-mcp/: page-2026-05-10T10-02-07-051Z.yml  page-2026-05-10T21-47-05-353Z.yml
.tabnine/guidelines/: maru-research-protocol.md
benchmark/: refiner_benchmark.py  search_quality_benchmark.py
docs/: .gitignore  _config.yml  agent_matrix.html  app.vue  dist  engine_insights.md  index.html  lessons_learned.md  nuxt.config.ts  package-lock.json  package.json  robots.txt  sitemap.xml
docs/assets/marketing/: panels.css
docs/components/: ArchitectureDiagramSection.vue  ArchitectureSection.vue  CodeShowcaseSection.vue  FeaturesSection.vue  HeroSection.vue  InstallSection.vue  StatsSection.vue  ToolsSection.vue
docs/components/landing/: BeforeAfterSection.vue  PerformanceSection.vue
docs/fixtures/: manifest.json
docs/fixtures/raw/: embedding.md  korean_market.md  security.md  setup_flow.md  tech_compare.md
docs/fixtures/synthesis/: embedding.md  korean_market.md  security.md  setup_flow.md  tech_compare.md
docs/i18n/locales/: en.json  ko.json
docs/ko/: index.html
docs/layouts/: default.vue
docs/locales/: en.json  ko.json
docs/marketing/: BRIEF.md  SCREENSHOTS.md
docs/pages/: index.vue
docs/partials/panels/: compare_split.html  embedding.html  korean_market.html  quality_signals.html  setup_flow.html  tech_compare.html
docs/plugins/: i18n-messages.ts
docs/public/: 404.html  readme.html
docs/screenshots/templates/: _base.css  compare-split.html  cursor-answer.html  cursor-mcp-tool.html  og-card.html  quality-signals.html  terminal-setup.html
scripts/: capture_marketing_fixtures.py  embed_marketing_panels.py  install.ps1  install.sh  marketing_panels.py  patch_index_markers.py  render_marketing_screenshots.py  requirements-marketing.txt
src/clco_deep_research/: __init__.py  server.py  tools.py
src/clco_deep_research/engines/: code_aware.py  duckduckgo.py
src/clco_deep_research/research/: deep.py  expander.py  extractor.py
src/maru_deep_pro_search/: __init__.py  config.py  embeddings.py  exceptions.py  server.py  tools.py
src/maru_deep_pro_search/cli/: backup.py  detect.py  doctor.py  embeddings_cmd.py  env_check.py  hermes_yaml.py  hooks_templates.py  init_cmd.py  knowledge_cmd.py  plugin_cmd.py  prompts.py  setup.py  stats_cmd.py  toml_edit.py  update_cmd.py  verify_status.py  workflow_cmd.py
src/maru_deep_pro_search/cli/agents/: aider.py  amazon_q.py  antigravity.py  base.py  claude.py  cline.py  codeium.py  codex.py  cody.py  continue_.py  cursor.py  devin.py  hermes.py  hermes_plugin.py  jetbrains.py  kilo.py  kimi.py  kimi_toml.py  opencode.py  supermaven.py  tabnine.py  windsurf.py  zed.py
src/maru_deep_pro_search/engines/: baidu.py  base.py  bing.py  duckduckgo.py  ecosia.py  google.py  naver.py  registry.py  startpage.py  yahoo.py
src/maru_deep_pro_search/extraction/: code.py  content.py
src/maru_deep_pro_search/harness/: __init__.py  audit.py  constants.py  drift.py  enforcer.py  persistence.py  plugin.py  project.py  spec.py  workflow.py
src/maru_deep_pro_search/refiner/: __init__.py  config.py  engine.py  hardware.py  model_manager.py
src/maru_deep_pro_search/research/: __init__.py  deep.py  expander.py  fetch_planner.py  gap_detector.py  pipeline.py  ranker.py  receipt.py  semantic_ranker.py  signals.py
src/maru_deep_pro_search/skills/answer-engine/: SKILL.md
src/maru_deep_pro_search/skills/deep-research/: SKILL.md
src/maru_deep_pro_search/skills/web-search/: SKILL.md
src/maru_deep_pro_search/tools_v2/: __init__.py  decompose.py  fetch.py  search.py  verify.py
src/maru_deep_pro_search/utils/: cache.py  locale_harness.py  query_gate.py  query_sanitize.py  rate_limiter.py  sanitize.py  tool_result.py  updater.py  url.py
src/maru_search/: __init__.py  server.py  tools.py
src/maru_search/engines/: google.py  registry.py  startpage.py
src/maru_search/utils/: sanitize.py
tests/: conftest.py  test_adapter_smoke.py  test_agent_aider.py  test_agent_base.py  test_agent_cline.py  test_agent_continue.py  test_agent_idempotency.py  test_agent_windsurf.py  test_agent_zed.py  test_audit.py  test_backup.py  test_citation_renumbering.py  test_cli_commands.py  test_code_aware.py  test_deep_search.py  test_detect.py  test_duckduckgo.py  test_enforcer.py  test_engines.py  test_env_check.py  test_extractor.py  test_gap_detector.py  test_harness.py  test_hermes_plugin.py  test_korean_support.py  test_locale_harness.py  test_plugin.py  test_project.py  test_query_sanitize.py  test_ranker.py  test_rate_limiter.py  test_retry.py  test_sanitize.py  test_server.py  test_setup.py  test_spec.py  test_stats_cmd.py  test_token_defaults.py  test_tool_integration.py  test_tools.py  (+2 more)
