[project]
name = "maru-search"
version = "0.6.0"
description = "Universal AI search MCP server — Perplexity-level quality with zero API keys. Multi-engine web scraping, intelligent ranking, and citation-native answers."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "maru", email = "ryan.h.park@me.com" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "web-search",
    "deep-research",
    "perplexity",
    "ai-search",
    "scraping",
    "llm-tools",
    "trafilatura",
    "citations",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "htmldate>=1.9.4",
    "mcp>=1.0.0",
    "pygments>=2.20.0",
    "scrapling[fetchers]>=0.2.0",
    "trafilatura>=2.0.0",
    "rank-bm25>=0.2.2",
]

[project.urls]
Homepage = "https://claudianus.github.io/maru-search/"
Documentation = "https://claudianus.github.io/maru-search/"
Repository = "https://github.com/claudianus/maru-search"
Issues = "https://github.com/claudianus/maru-search/issues"

[project.scripts]
maru-search = "maru_search.server:run"
maru-search-mcp = "maru_search.server:run"

[tool.uvx]
python = "3.12"
quiet = true

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
