[project]
name = "maru-deep-pro-search"
version = "0.9.2"
description = "Universal AI search MCP server — Perplexity-level quality with zero API keys. Multi-engine web scraping, intelligent ranking, and citation-native answers."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "claudianus", email = "claudianus@engineer.com" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "web-search",
    "deep-research",
    "perplexity",
    "ai-search",
    "scraping",
    "llm-tools",
    "trafilatura",
    "citations",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "htmldate>=1.9.4",
    "mcp>=1.0.0",
    "pygments>=2.20.0",
    "scrapling[fetchers]>=0.2.0",
    "trafilatura>=2.0.0",
    "rank-bm25>=0.2.2",
]

[project.urls]
Homepage = "https://claudianus.github.io/maru-deep-pro-search/"
Documentation = "https://claudianus.github.io/maru-deep-pro-search/"
Repository = "https://github.com/claudianus/maru-deep-pro-search"
Issues = "https://github.com/claudianus/maru-deep-pro-search/issues"

[project.scripts]
maru-deep-pro-search = "maru_deep_pro_search.server:run"
maru-deep-pro-search-mcp = "maru_deep_pro_search.server:run"
maru-deep-pro-search-setup = "maru_deep_pro_search.cli.setup:main"
maru-deep-pro-search-init = "maru_deep_pro_search.cli.init_cmd:main"
maru-deep-pro-search-plugin = "maru_deep_pro_search.cli.plugin_cmd:main"

[tool.uvx]
python = "3.12"
quiet = true

[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
semantic = [
    "sentence-transformers>=3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.0",
    "mypy>=1.15.0",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
