[project]
name = "maru-deep-pro-search"
version = "0.22.1"
description = "Universal AI search MCP server — Perplexity-level quality with zero API keys. Multi-engine web scraping, intelligent ranking, and citation-native answers."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "claudianus", email = "claudianus@engineer.com" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "web-search",
    "deep-research",
    "perplexity",
    "ai-search",
    "scraping",
    "llm-tools",
    "trafilatura",
    "citations",
    "cursor",
    "claude",
    "agent",
    "coding-assistant",
    "semantic-search",
    "bm25",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "htmldate>=1.9.4",
    "mcp>=1.0.0",
    "pyyaml>=6.0.1",
    "pygments>=2.20.0",
    "scrapling[fetchers]>=0.2.99",
    "trafilatura>=2.0.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0.0",
    "urllib3>=2.7.0",
]

[project.urls]
Homepage = "https://claudianus.github.io/maru-deep-pro-search/"
Documentation = "https://claudianus.github.io/maru-deep-pro-search/"
Repository = "https://github.com/claudianus/maru-deep-pro-search"
Issues = "https://github.com/claudianus/maru-deep-pro-search/issues"

[project.scripts]
maru-deep-pro-search = "maru_deep_pro_search.server:run"
maru-deep-pro-search-mcp = "maru_deep_pro_search.server:run"
maru-deep-pro-search-setup = "maru_deep_pro_search.cli.setup:main"
maru-deep-pro-search-init = "maru_deep_pro_search.cli.init_cmd:main"
maru-deep-pro-search-knowledge = "maru_deep_pro_search.cli.knowledge_cmd:main"
maru-deep-pro-search-plugin = "maru_deep_pro_search.cli.plugin_cmd:main"

[project.entry-points."hermes_agent.plugins"]
maru-research-gate = "maru_deep_pro_search.cli.agents.hermes_plugin:register"

[tool.uvx]
python = "3.12"
quiet = true

[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"maru_deep_pro_search" = ["skills/**/*"]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
# Kept for backward-compatible install scripts; embeddings are core since 0.21.0.
semantic = []

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "mypy>=1.15.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

